@@ -18,6 +18,7 @@ import static org.candlepin.model.SourceSubscription.DERIVED_POOL_SUB_KEY;
 import static org.candlepin.model.SourceSubscription.PRIMARY_POOL_SUB_KEY;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -36,6 +37,7 @@ import org.candlepin.config.Configuration;
 import org.candlepin.controller.PoolManager;
 import org.candlepin.model.Branding;
 import org.candlepin.model.Consumer;
+import org.candlepin.model.Content;
 import org.candlepin.model.Entitlement;
 import org.candlepin.model.EntitlementCurator;
 import org.candlepin.model.Owner;
@@ -65,10 +67,12 @@ import org.mockito.quality.Strictness;
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -177,6 +181,55 @@ public class PoolRulesTest {
     }
 
     @Test
+    public void testUnchangedPoolIgnoredWhenNotForced() {
+        Branding branding1 = new Branding(null, "8000", "Awesome OS Branded", "OS");
+        Branding branding2 = new Branding(null, "8001", "Awesome OS Branded 2", "OS");
+
+        Content content1 = TestUtil.createContent();
+        Content content2 = TestUtil.createContent();
+        Content content3 = TestUtil.createContent();
+        Content content4 = TestUtil.createContent();
+
+        Product provProd1 = TestUtil.createProduct();
+        provProd1.addContent(content1, true);
+        provProd1.setAttributes(Map.of("attr1", "val1", "attr2", "val2"));
+
+        Product provProd2 = TestUtil.createProduct();
+        provProd2.addContent(content2, false);
+        provProd2.setAttributes(Map.of("attrA", "valA", "attrB", "valB"));
+
+        Product provProd3 = TestUtil.createProduct();
+        provProd3.addContent(content3, true);
+        provProd3.setAttributes(Map.of("attr1", "val1", "attr2", "val2"));
+
+        Product provProd4 = TestUtil.createProduct();
+        provProd4.addContent(content4, false);
+        provProd4.setAttributes(Map.of("attrA", "valA", "attrB", "valB"));
+
+        Product derivedProduct = TestUtil.createProduct();
+        derivedProduct.addProvidedProduct(provProd3);
+        derivedProduct.addProvidedProduct(provProd4);
+        derivedProduct.setAttributes(Map.of("attr1", "val1", "attr2", "val2"));
+
+        Product product = TestUtil.createProduct();
+        product.setDerivedProduct(derivedProduct);
+        product.addProvidedProduct(provProd1);
+        product.addProvidedProduct(provProd2);
+        product.addBranding(branding1);
+        product.addBranding(branding2);
+        product.setAttributes(Map.of("attrX", "valX", "attrY", "valY"));
+
+        Pool existingPool = TestUtil.createPool(this.owner, TestUtil.createProduct());
+        Pool upstreamPool = this.clonePool(existingPool);
+
+        List<PoolUpdate> updates = this.poolRules.updatePools(upstreamPool, List.of(existingPool),
+            existingPool.getQuantity(), Map.of(), false);
+
+        assertNotNull(updates);
+        assertEquals(0, updates.size());
+    }
+
+    @Test
     public void providedProductsChanged() {
         // Pool with two provided products:
         Pool p = TestUtil.createPool(owner, TestUtil.createProduct());
@@ -194,12 +247,38 @@ public class PoolRulesTest {
         List<Pool> existingPools = new LinkedList<>();
         existingPools.add(p1);
         List<PoolUpdate> updates = this.poolRules.updatePools(p, existingPools, p.getQuantity(),
-            TestUtil.stubChangedProducts(p.getProduct()));
+            TestUtil.stubChangedProducts(p.getProduct()), false);
         assertEquals(1, updates.size());
         PoolUpdate update = updates.get(0);
         assertTrue(update.getProductsChanged());
         assertFalse(update.getDatesChanged());
         assertFalse(update.getQuantityChanged());
+    }
+
+    @Test
+    public void testUnchangedProvidedProductsMarkedAsChangedWhenForced() {
+        Product prov1 = TestUtil.createProduct();
+        Product prov2 = TestUtil.createProduct();
+
+        Product product = TestUtil.createProduct();
+        product.addProvidedProduct(prov1);
+        product.addProvidedProduct(prov2);
+
+        Pool existingPool = TestUtil.createPool(owner, product);
+        Pool upstreamPool = this.clonePool(existingPool);
+        Collection<Product> providedProducts = existingPool.getProduct().getProvidedProducts();
+
+        List<PoolUpdate> updates = this.poolRules.updatePools(upstreamPool, List.of(existingPool),
+            existingPool.getQuantity(), Map.of(), true);
+
+        assertNotNull(updates);
+        assertEquals(1, updates.size());
+
+        PoolUpdate update = updates.get(0);
+        assertNotNull(update);
+        assertTrue(update.getProductsChanged());
+        assertEquals(providedProducts, existingPool.getProduct().getProvidedProducts());
+        assertEquals(providedProducts, upstreamPool.getProduct().getProvidedProducts());
     }
 
     @Test
@@ -210,9 +289,8 @@ public class PoolRulesTest {
         Pool p1 = this.clonePool(p);
         p1.getProduct().setName("somethingelse");
 
-        List<Pool> existingPools = Arrays.asList(p1);
-        List<PoolUpdate> updates = this.poolRules.updatePools(p, existingPools, p.getQuantity(),
-            TestUtil.stubChangedProducts(p.getProduct()));
+        List<PoolUpdate> updates = this.poolRules.updatePools(p, List.of(p1), p.getQuantity(),
+            TestUtil.stubChangedProducts(p.getProduct()), false);
 
         assertEquals(1, updates.size());
         PoolUpdate update = updates.get(0);
@@ -223,7 +301,25 @@ public class PoolRulesTest {
     }
 
     @Test
-    public void datesNameChanged() {
+    public void testUnchangedProductNameMarkedAsChangedWhenForced() {
+        Pool existingPool = TestUtil.createPool(this.owner, TestUtil.createProduct());
+        Pool upstreamPool = this.clonePool(existingPool);
+        String productName = existingPool.getProduct().getName();
+
+        List<PoolUpdate> updates = this.poolRules.updatePools(upstreamPool, List.of(existingPool),
+            existingPool.getQuantity(), Map.of(), true);
+
+        assertNotNull(updates);
+        assertEquals(1, updates.size());
+
+        PoolUpdate update = updates.get(0);
+        assertTrue(update.getProductsChanged());
+        assertEquals(productName, existingPool.getProduct().getName());
+        assertEquals(productName, upstreamPool.getProduct().getName());
+    }
+
+    @Test
+    public void testDatesChanged() {
         Pool p = TestUtil.createPool(owner, TestUtil.createProduct());
 
         // Setup a pool with a single (different) provided product:
@@ -232,7 +328,7 @@ public class PoolRulesTest {
 
         List<Pool> existingPools = Arrays.asList(p1);
         List<PoolUpdate> updates = this.poolRules.updatePools(p, existingPools, p.getQuantity(),
-            Collections.emptyMap());
+            Collections.emptyMap(), false);
 
         assertEquals(1, updates.size());
         PoolUpdate update = updates.get(0);
@@ -240,6 +336,27 @@ public class PoolRulesTest {
         assertTrue(update.getDatesChanged());
         assertFalse(update.getQuantityChanged());
         assertEquals(p.getEndDate(), update.getPool().getEndDate());
+    }
+
+    @Test
+    public void testUnchangedDatesMarkedAsChangedWhenForced() {
+        Pool existingPool = TestUtil.createPool(this.owner, TestUtil.createProduct());
+        Pool upstreamPool = this.clonePool(existingPool);
+        Date startDate = existingPool.getStartDate();
+        Date endDate = existingPool.getEndDate();
+
+        List<PoolUpdate> updates = this.poolRules.updatePools(upstreamPool, List.of(existingPool),
+            existingPool.getQuantity(), Map.of(), true);
+
+        assertNotNull(updates);
+        assertEquals(1, updates.size());
+
+        PoolUpdate update = updates.get(0);
+        assertTrue(update.getDatesChanged());
+        assertEquals(startDate, existingPool.getStartDate());
+        assertEquals(startDate, upstreamPool.getStartDate());
+        assertEquals(endDate, existingPool.getEndDate());
+        assertEquals(endDate, upstreamPool.getEndDate());
     }
 
     @Test
@@ -252,7 +369,7 @@ public class PoolRulesTest {
 
         List<Pool> existingPools = Arrays.asList(p1);
         List<PoolUpdate> updates = this.poolRules.updatePools(p, existingPools, p.getQuantity(),
-            Collections.emptyMap());
+            Collections.emptyMap(), false);
 
         assertEquals(1, updates.size());
         PoolUpdate update = updates.get(0);
@@ -260,6 +377,24 @@ public class PoolRulesTest {
         assertFalse(update.getDatesChanged());
         assertTrue(update.getQuantityChanged());
         assertEquals(p.getQuantity(), update.getPool().getQuantity());
+    }
+
+    @Test
+    public void testUnchangedPoolQuantityMarkedAsChangedWhenForced() {
+        Pool existingPool = TestUtil.createPool(this.owner, TestUtil.createProduct());
+        Pool upstreamPool = this.clonePool(existingPool);
+        Long quantity = existingPool.getQuantity();
+
+        List<PoolUpdate> updates = this.poolRules.updatePools(upstreamPool, List.of(existingPool),
+            existingPool.getQuantity(), Map.of(), true);
+
+        assertNotNull(updates);
+        assertEquals(1, updates.size());
+
+        PoolUpdate update = updates.get(0);
+        assertTrue(update.getQuantityChanged());
+        assertEquals(quantity, existingPool.getQuantity());
+        assertEquals(quantity, upstreamPool.getQuantity());
     }
 
     @Test
@@ -276,7 +411,7 @@ public class PoolRulesTest {
 
         List<Pool> existingPools = Arrays.asList(p1);
         List<PoolUpdate> updates = this.poolRules.updatePools(p, existingPools, p.getQuantity(),
-            TestUtil.stubChangedProducts(p.getProduct()));
+            TestUtil.stubChangedProducts(p.getProduct()), false);
 
         assertEquals(1, updates.size());
         PoolUpdate update = updates.get(0);
@@ -302,9 +437,34 @@ public class PoolRulesTest {
 
         List<Pool> existingPools = Arrays.asList(p1);
         List<PoolUpdate> updates = this.poolRules.updatePools(p, existingPools, p.getQuantity(),
-            Collections.emptyMap());
+            Collections.emptyMap(), false);
 
         assertEquals(0, updates.size());
+    }
+
+    @Test
+    public void testUnchangedProductBrandingMarkedAsChangedWhenForced() {
+        Branding branding1 = new Branding(null, "8000", "Awesome OS Branded", "OS");
+        Branding branding2 = new Branding(null, "8001", "Awesome OS Branded 2", "OS");
+
+        Product product = TestUtil.createProduct();
+        product.addBranding(branding1);
+        product.addBranding(branding2);
+
+        Pool existingPool = TestUtil.createPool(this.owner, product);
+        Pool upstreamPool = this.clonePool(existingPool);
+        Collection<Branding> branding = product.getBranding();
+
+        List<PoolUpdate> updates = this.poolRules.updatePools(upstreamPool, List.of(existingPool),
+            existingPool.getQuantity(), Map.of(), true);
+
+        assertNotNull(updates);
+        assertEquals(1, updates.size());
+
+        PoolUpdate update = updates.get(0);
+        assertTrue(update.getProductsChanged());
+        assertEquals(branding, existingPool.getProduct().getBranding());
+        assertEquals(branding, upstreamPool.getProduct().getBranding());
     }
 
     @Test
@@ -320,7 +480,7 @@ public class PoolRulesTest {
         p1.setQuantity(40L);
 
         List<Pool> existingPools = Arrays.asList(p1);
-        List<PoolUpdate> updates = this.poolRules.updatePools(p, existingPools, p.getQuantity(), null);
+        List<PoolUpdate> updates = this.poolRules.updatePools(p, existingPools, p.getQuantity(), null, false);
 
         assertEquals(1, updates.size());
         PoolUpdate update = updates.get(0);
@@ -330,6 +490,61 @@ public class PoolRulesTest {
         assertTrue(update.getQuantityChanged());
         assertEquals(Long.valueOf(50), update.getPool().getQuantity());
     }
+
+    @Test
+    public void testUnchangedVirtOnlyQuantityMarkedAsChangedWhenForced() {
+        Product product = TestUtil.createProduct();
+        product.setAttribute(Product.Attributes.VIRT_ONLY, "true");
+        product.setAttribute(Product.Attributes.VIRT_LIMIT, "5");
+
+        Pool existingPool = TestUtil.createPool(this.owner, product);
+        existingPool.setAttribute(Pool.Attributes.DERIVED_POOL, "true");
+
+        Pool upstreamPool = this.clonePool(existingPool);
+        Long quantity = existingPool.getQuantity();
+
+        List<PoolUpdate> updates = this.poolRules.updatePools(upstreamPool, List.of(existingPool),
+            existingPool.getQuantity(), Map.of(), true);
+
+        assertNotNull(updates);
+        assertEquals(1, updates.size());
+
+        PoolUpdate update = updates.get(0);
+        assertTrue(update.getQuantityChanged());
+        assertEquals(quantity, existingPool.getQuantity());
+        assertEquals(quantity, upstreamPool.getQuantity());
+    }
+
+    @Test
+    public void testUnchangedOrderDetailsMarkedAsChangedWhenForced() {
+        Pool existingPool = TestUtil.createPool(this.owner, TestUtil.createProduct());
+        existingPool.setAccountNumber("acc123");
+        existingPool.setContractNumber("con123");
+        existingPool.setOrderNumber("ord123");
+
+        Pool upstreamPool = this.clonePool(existingPool);
+
+        String accNumber = existingPool.getAccountNumber();
+        String conNumber = existingPool.getContractNumber();
+        String ordNumber = existingPool.getOrderNumber();
+
+        List<PoolUpdate> updates = this.poolRules.updatePools(upstreamPool, List.of(existingPool),
+            existingPool.getQuantity(), Map.of(), true);
+
+        assertNotNull(updates);
+        assertEquals(1, updates.size());
+
+        PoolUpdate update = updates.get(0);
+        assertTrue(update.getOrderChanged());
+
+        assertEquals(accNumber, existingPool.getAccountNumber());
+        assertEquals(conNumber, existingPool.getContractNumber());
+        assertEquals(ordNumber, existingPool.getOrderNumber());
+        assertEquals(accNumber, upstreamPool.getAccountNumber());
+        assertEquals(conNumber, upstreamPool.getContractNumber());
+        assertEquals(ordNumber, upstreamPool.getOrderNumber());
+    }
+
 
     @Test
     public void updatePoolSubProvidedProductsChanged() {
@@ -360,7 +575,7 @@ public class PoolRulesTest {
 
         List<Pool> existingPools = Arrays.asList(pool2);
         List<PoolUpdate> updates = this.poolRules.updatePools(pool1, existingPools, pool1.getQuantity(),
-            TestUtil.stubChangedProducts(mktProduct1, subProduct1));
+            TestUtil.stubChangedProducts(mktProduct1, subProduct1), false);
 
         assertEquals(1, updates.size());
         assertEquals(2, updates.get(0).getPool().getDerivedProduct().getProvidedProducts().size());
@@ -459,7 +674,7 @@ public class PoolRulesTest {
         // Now we update the sub and see if that unlimited pool gets adjusted:
         p.getProduct().setAttribute(Product.Attributes.VIRT_LIMIT, "10");
         List<PoolUpdate> updates = poolRules.updatePools(p, pools, p.getQuantity(),
-            TestUtil.stubChangedProducts(p.getProduct()));
+            TestUtil.stubChangedProducts(p.getProduct()), false);
         assertEquals(2, updates.size());
 
         PoolUpdate virtUpdate = updates.get(1);
@@ -479,7 +694,7 @@ public class PoolRulesTest {
         // the unlimited pool gets adjusted and flagged for cleanup:
         p.setProduct(TestUtil.createProduct(p.getProduct().getId(), p.getProduct().getName()));
         List<PoolUpdate> updates = poolRules.updatePools(p, pools, p.getQuantity(),
-            TestUtil.stubChangedProducts(p.getProduct()));
+            TestUtil.stubChangedProducts(p.getProduct()), false);
         assertEquals(2, updates.size());
 
         // Regular pool should be in a sane state:
@@ -511,7 +726,7 @@ public class PoolRulesTest {
         // the unlimited pool gets adjusted and flagged for cleanup:
         p.setProduct(TestUtil.createProduct(p.getProduct().getId(), p.getProduct().getName()));
         List<PoolUpdate> updates = poolRules.updatePools(p, pools, p.getQuantity(),
-            TestUtil.stubChangedProducts(p.getProduct()));
+            TestUtil.stubChangedProducts(p.getProduct()), false);
         assertEquals(2, updates.size());
 
         // Regular pool should be in a sane state:
@@ -745,7 +960,7 @@ public class PoolRulesTest {
         p = createVirtLimitPool("virtLimitProduct", 10, 10);
         p.setQuantity(50L);
         List<PoolUpdate> updates = poolRules.updatePools(p, pools, p.getQuantity(),
-            Collections.emptyMap());
+            Collections.emptyMap(), false);
         assertEquals(2, updates.size());
         physicalPool = updates.get(0).getPool();
         assertEquals(50L, physicalPool.getQuantity());
@@ -790,7 +1005,7 @@ public class PoolRulesTest {
 
         p = createVirtOnlyPool("virtOnlyProduct", 20);
         List<PoolUpdate> updates = poolRules.updatePools(p, pools, p.getQuantity(),
-            Collections.emptyMap());
+            Collections.emptyMap(), false);
         assertEquals(1, updates.size());
         Pool updated = updates.get(0).getPool();
         assertEquals(20L, updated.getQuantity());
@@ -817,7 +1032,7 @@ public class PoolRulesTest {
         pools.add(consumerSpecificPool);
 
         List<PoolUpdate> updates = poolRules.updatePools(p, pools, p.getQuantity(),
-            Collections.emptyMap());
+            Collections.emptyMap(), false);
         assertEquals(0, updates.size());
     }
 
@@ -844,7 +1059,7 @@ public class PoolRulesTest {
 
         p.getProduct().setAttribute(Product.Attributes.VIRT_LIMIT, "40");
         List<PoolUpdate> updates = poolRules.updatePools(p, pools, p.getQuantity(),
-            TestUtil.stubChangedProducts(p.getProduct()));
+            TestUtil.stubChangedProducts(p.getProduct()), false);
         assertEquals(3, updates.size());
         Pool regular = updates.get(0).getPool();
         Pool unmappedSubPool = updates.get(1).getPool();
@@ -870,7 +1085,7 @@ public class PoolRulesTest {
         existingPools.add(p1);
 
         List<PoolUpdate> updates = this.poolRules.updatePools(p, existingPools, p.getQuantity(),
-            Collections.emptyMap());
+            Collections.emptyMap(), false);
         assertEquals(0, updates.size());
     }
 
@@ -889,7 +1104,7 @@ public class PoolRulesTest {
         List<Pool> existingPools = new LinkedList<>();
         existingPools.add(p1);
         List<PoolUpdate> updates = this.poolRules.updatePools(p, existingPools, p.getQuantity(),
-            Collections.emptyMap());
+            Collections.emptyMap(), false);
 
         assertEquals(1, updates.size());
         PoolUpdate update = updates.get(0);
@@ -912,7 +1127,7 @@ public class PoolRulesTest {
         List<Pool> existingPools = new LinkedList<>();
         existingPools.add(p1);
         List<PoolUpdate> updates = this.poolRules.updatePools(p, existingPools, p.getQuantity(),
-            Collections.emptyMap());
+            Collections.emptyMap(), false);
 
         assertEquals(1, updates.size());
         PoolUpdate update = updates.get(0);
@@ -933,7 +1148,7 @@ public class PoolRulesTest {
         List<Pool> existingPools = new LinkedList<>();
         existingPools.add(p1);
         List<PoolUpdate> updates = this.poolRules.updatePools(p, existingPools, p.getQuantity(),
-            Collections.emptyMap());
+            Collections.emptyMap(), false);
 
         assertEquals(1, updates.size());
         PoolUpdate update = updates.get(0);
@@ -954,7 +1169,7 @@ public class PoolRulesTest {
         List<Pool> existingPools = new LinkedList<>();
         existingPools.add(p1);
         List<PoolUpdate> updates = this.poolRules.updatePools(p, existingPools, p.getQuantity(),
-            Collections.emptyMap());
+            Collections.emptyMap(), false);
 
         assertEquals(1, updates.size());
         PoolUpdate update = updates.get(0);
@@ -973,8 +1188,8 @@ public class PoolRulesTest {
         Product changed = p.getProduct();
         changed.setName("somethingelse");
 
-        List<PoolUpdate> updates = this.poolRules.updatePools(floatingPools,
-            TestUtil.stubChangedProducts(changed));
+        List<PoolUpdate> updates = this.poolRules.updateFloatingPools(floatingPools,
+            TestUtil.stubChangedProducts(changed), false);
         assertEquals(0, updates.size());
     }
 
